@@ -1,7 +1,6 @@
 ---
 fixtures:
   repositories:
-    simpcat: "https://github.com/simp/pupmod-simp-simpcat"
     simplib: "https://github.com/simp/pupmod-simp-simplib"
     stdlib:  "https://github.com/simp/puppetlabs-stdlib"
   symlinks:
